Create logic for player (dto, IService, Service, controller mapper), update database, add safe delete for every entity, fix time zone probleb it should have timestampt with time zone!! test endpoint for player
