# server/api/Program.cs
@@ -6,6 +6,7 @@ using Microsoft.EntityFrameworkCore;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.Options;
 using Npgsql.EntityFrameworkCore.PostgreSQL;
+using api.Features.Players;
 
 var builder = WebApplication.CreateBuilder(args);
 
@@ -18,6 +19,7 @@ builder.Services.AddSwaggerGen();
 builder.Services.AddCors();
 builder.Services.AddProblemDetails();
 builder.Services.AddExceptionHandler<GlobalExceptionHandler>();
+builder.Services.AddScoped<IPlayerService, PlayerService>();
 
 
 var appOptions = builder.Services.AddAppOptions(builder.Configuration);
@@ -40,26 +42,6 @@ app.UseCors(config => config
     .AllowAnyMethod()
     .AllowAnyHeader()
     .SetIsOriginAllowed(x => true));
-
-app.MapGet("/", (
-    [FromServices]IOptionsMonitor<AppOptions> optionsMonitor,
-    [FromServices]MyDbContext dbContext) =>
-{
-    
-    var myPlayer = new Player()
-    {
-        Playerid = Guid.NewGuid(),
-        Name = "Jeremy Morris",
-        Phone = "+45 78 78 97 69",
-        Email = "jeremy@morris.com",
-        Active = true,
-        Createdat = DateTime.Now
-    };
-    dbContext.Players.Add(myPlayer);
-    dbContext.SaveChanges();
-    var objects = dbContext.Players.ToList();
-    return objects;
-});
 
 // Enable Swagger UI in development mode
 if (app.Environment.IsDevelopment())
